增加测试文件 + 增强稳定性